test/positive/feature_nullliteral.java

public class feature_nullliteral {
  public feature_nullliteral() {}
  protected feature_nullliteral x = null;
}

