test/negative/feature_longliterals.java

public class feature_longliterals {
  public feature_longliterals() {}
  protected long x = 2147483648L;
}

